Add AWS SES email send capability
